--- a/chi2012.tex
+++ b/chi2012.tex
@@ -487,7 +487,7 @@ The following four sections describe the metrics we used to measure task perform
 Participants spent an average of 8.9 minutes performing the tasks. Condition A (DP) took slightly less time ($M=8.7$min, $SD=1.79$) per trial than condition B ($M=9.0$min; $SD=1.44$); however, a 2-way repeated measures ANOVA test of time taken by interface condition, blocked by participant ID, revealed that interface condition did not have a significant effect on task completion time.  This analysis also showed no significant effect of participant ID on task completion.  Comparing tasks, the restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), but this difference was not significant. 
 
 \subsubsection{Thoroughness: Factors weighed in final choice}
-The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Schiffe adjustments indicated that participants in the DP condition mentioned significantly more factors in their final decisions ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
+The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors in their final decisions ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
 
 \subsubsection{Diversity: Data sources consulted}
 The third metric we used to gauge the task performance is the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$)in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p\approx0.10$).
@@ -511,7 +511,7 @@ As described in later this section, we noticed several different strategies peop
 
 To understand whether the interface influenced choice of strategy, we measured the number of candidates the participant considered \emph{at final result}.  This is a strong marker for use of each strategy; people using the successive elimination strategy arrived with only 1--2 candidates at decision time, while those that tallied still maintained the entire starting set.\looseness=-1
 
-We found that the use of DP strongly influenced people to keep all candidates around, while participants in the B condition eliminated choices early.  An ANOVA test demonstrated a significant effect between condition and number of candidates maintained ($F(1,19)=5.323; p<0.05$); a post-hoc Tukey HSD test confirmed that the number of candidates used in the final choice for participants in the A condition ($M=5.85;SD=0.45$) differed significantly from the B condition ($M=4.95; SD=2.26$).
+We found that the use of DP strongly influenced people to keep all candidates around, while participants in the B condition eliminated choices early.  An ANOVA test demonstrated a significant effect between condition and number of candidates maintained; a post-hoc analysis with Tukey-Scheff\'{e} adjustments confirmed that the number of candidates used in the final choice for participants in the DP condition was greater ($M=5.85;SD=0.45$) than the control condition ($M=4.95; SD=2.26$) $F(1,19)=5.323; p<0.05$.
 
 \subsection{Use of Data Integration Features}
 
