--- a/chi2012.tex
+++ b/chi2012.tex
@@ -303,7 +303,7 @@ The two pre-studies provided valuable insight towards this goal that allowed us 
 \subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how we'd achieve effective data mixing by end-users. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by colleagues (and in later iterations, non-expert potential users), who critiqued the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (e.g., JSON, XML, RDF) without any loss of generality.
+In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from OS X Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (e.g., JSON, XML, RDF) without any loss of generality.
 
 \subsubsection{Multi-path selection: link-sliding for heterogeneous sets}
 
@@ -394,7 +394,7 @@ We first describe our methodology, starting with the three hypotheses we set out
 \subsubsection{Study and task design}
 To test these hypotheses, we designed a within-subjects (repeated measures) lab-based A-B study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (condition A) and once with a baseline interface (condition B).  Each task was paired with one of two datasets, depending on condition, which were fully counterbalanced in a Latin square design to eliminate potential ordering, task, and dataset biases.\looseness=-1
 
-The participants were seated at a standard Macintosh desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to each of two tasks, but were told that if they finished earlier they could tell us and move on to the next condition.  Prior to A conditions, participants were trained on how to use DP using a five-minute instructional video.
+The participants were seated at a standard OS X desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to each of two tasks, but were told that if they finished earlier they could tell us and move on to the next condition.  Prior to A conditions, participants were trained on how to use DP using a five-minute instructional video.
 
 In the control conditions, participants were given a web browser with tabs open to all of the data sources they were provided for use, as well as a spreadsheet containing the data taken from web sites pertaining to the candidates they were asked to choose from. Participants were told they were free to use the web sites and spreadsheets however they wished. 
 
