--- a/chi2012.tex
+++ b/chi2012.tex
@@ -100,11 +100,11 @@ breaklinks=true,
 
 \begin{abstract}
 
-While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
-In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web.
-We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies examining the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
-These observations led to our design of DataPalette, an interface that introduced simple drag-and-drop and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
-Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions, drawing upon more data sources with DataPalette than a control condition during multidimensional, subjective-choice decisions.
+While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
+In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web.
+We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources.
+These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
+Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
 %% While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
 %% In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystems of structured data available on the Web.
@@ -487,7 +487,7 @@ The following four sections describe the metrics we used to measure task perform
 Participants spent an average of 8.9 minutes performing the tasks. Condition A (DP) took slightly less time ($M=8.7$min, $SD=1.79$) per trial than condition B ($M=9.0$min; $SD=1.44$); however, a 2-way repeated measures ANOVA test of time taken by interface condition, blocked by participant ID, revealed that interface condition did not have a significant effect on task completion time.  This analysis also showed no significant effect of participant ID on task completion.  Comparing tasks, the restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), but this difference was not significant. 
 
 \subsubsection{Thoroughness: Factors weighed in final choice}
-The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors in their final decisions ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
+The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
 
 \subsubsection{Diversity: Data sources consulted}
 The third metric we used to gauge the task performance is the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$)in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p\approx0.10$).
@@ -651,7 +651,7 @@ Our study had several limitations.  First, the small sample size of our study (2
 
 \section{Conclusions} %Key findings of the whole paper and its implications
 
-As said in Voltaire's poem \emph{La B\'{e}gueule}, ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have, perhaps, caused ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, however, we see a number of benefits to lightweight, user-driven, interactive approaches over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective attributes and labels were more useful than physical ones, we have shown that a user-driven approach to data integration, as achieved with DataPalette, affords users flexibility to combine and keep separate data at will, and may facilitate decision-making tasks.  Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through simple, fast interactive approaches that are received as intuitive by end-users. 
+As said in Voltaire's poem \emph{La B\'{e}gueule}, ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have, perhaps, caused ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, however, we see a number of benefits to lightweight, user-driven, interactive approaches over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective attributes and labels were more useful than physical ones, we have shown that a user-driven approach to data integration, as achieved with DataPalette, affords users flexibility to combine and keep separate data at will, and may facilitate decision-making tasks.  Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through easy to use, and intuitive interactive approaches for end-users. 
 
 
 %% Just as the Italian in Voltaire's poem \emph{La Begueule} said ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
