--- a/chi2012.tex
+++ b/chi2012.tex
@@ -490,7 +490,7 @@ Participants spent an average of 8.9 minutes performing the tasks. Condition A (
 The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  A 2-way ANOVA test of the effect of interface and participant ID on the number of factors mentioned revealed a significant effect; post-hoc analysis with Tukey-Scheff\'{e} adjustments indicated that participants in the DP condition mentioned significantly more factors ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning some participants mentioned significantly more factors than others ($F(19,19)=4.53; p < 0.001$).
 
 \subsubsection{Diversity: Data sources consulted}
-The third metric we used to gauge the task performance is the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$)in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p\approx0.10$).
+The third metric we used to gauge the task performance is the number of different data sources consulted during the trial; our rationale for this metric was that more informed decisions derived from more thorough consideration of available data. In this metric, participants used an average of 88\% ($SD=0.13$) of data sources provided in the DP case, compared to 80\% ($SD=0.18$) in the control condition, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance ($F(1,19)=0.04$ $p < 0.15$).
 
 \subsubsection{Effort: External cognition}
 Although we did not have an explicit measure of effort for this experiment (such as NASA's TLX \cite{tlx}) the use of paper notes provided an indicator of how much information participants had to keep track of during the study.  We found that participants took notes less on average (25\%) with the DP interface than the standard interface (35\%), a difference which approached significance in a 2-way ANOVA blocked by participant ID ($F(1,19)= 8.22; p\approx0.10$).
